--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.13.2",
     "@vee-validate/zod": "^4.13.2",
+    "@vueuse/core": "^10.11.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "lucide-vue-next": "^0.408.0",
     "nuxt": "^3.12.3",
-    "nuxt-snackbar": "^1.0.4",
+    "nuxt-snackbar": "^1.1.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "radix-vue": "^1.9.1",
